--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "main": "src/index.ts",
     "scripts": {
         "build": "rm -rf build/ && prettier --write src/ && tsc",
-        "start": "ts-node-dev src/index.ts"
+        "start": "ts-node-dev src/index.ts",
+        "serve": "ts-node-dev src/authServer.ts"
     },
     "license": "MIT",
     "type": "commonjs",
