--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
-    "name": "demo-nodejs-express",
-    "version": "1.0.0",
-    "main": "src/index.ts",
-    "scripts": {
-        "build": "rm -rf build/ && prettier --write src/ && tsc",
-        "start": "ts-node-dev src/index.ts",
-        "serve": "ts-node-dev src/authServer.ts"
-    },
-    "license": "MIT",
-    "type": "commonjs",
-    "dependencies": {
-        "@types/body-parser": "^1.19.2",
-        "@types/dotenv": "^8.2.0",
-        "@types/express": "^4.17.13",
-        "@types/jsonwebtoken": "^8.5.8",
-        "argon2": "^0.28.7",
-        "body-parser": "^1.20.0",
-        "cors": "^2.8.5",
-        "dotenv": "^16.0.1",
-        "express": "^4.18.1",
-        "jsonwebtoken": "^8.5.1",
-        "mongoose": "^6.4.4",
-        "prettier": "^2.7.1",
-        "ts-node": "^10.9.1",
-        "typescript": "^4.7.4"
-    },
-    "devDependencies": {
-        "ts-node-dev": "^2.0.0"
-    }
+  "name": "demo-nodejs-express",
+  "version": "1.0.0",
+  "main": "src/index.ts",
+  "scripts": {
+    "build": "rm -rf build/ && prettier --write src/ && tsc",
+    "server": "ts-node-dev src/server/index.ts",
+    "auth": "ts-node-dev src/auth/index.ts"
+  },
+  "license": "MIT",
+  "type": "commonjs",
+  "dependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
+    "argon2": "^0.28.7",
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.4.4",
+    "prettier": "^2.7.1",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.0.0",
+    "typescript": "^4.7.4"
+  },
+  "devDependencies": {
+    "ts-node-dev": "^2.0.0"
+  }
 }
