--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "scripts": {
     "build": "rm -rf build/ && prettier --write src/ && tsc",
     "server": "ts-node-dev src/server/index.ts",
-    "auth": "ts-node-dev src/auth/index.ts"
+    "auth": "ts-node-dev src/auth/index.ts",
+    "file": "ts-node-dev src/file/index.ts"
   },
   "license": "MIT",
   "type": "commonjs",
   "dependencies": {
     "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^18.0.6",
     "argon2": "^0.28.7",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
@@ -21,6 +25,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.4",
+    "multer": "^1.4.5-lts.1",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.0.0",
