--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "build": "rm -rf build/ && prettier --write src/ && tsc",
     "server": "ts-node-dev src/server/index.ts",
     "auth": "ts-node-dev src/auth/index.ts",
-    "file": "ts-node-dev src/file/index.ts"
+    "file": "ts-node-dev src/file/index.ts",
+    "prod-server": "node src/server/index.ts",
+    "prod-auth": "node src/auth/index.ts",
+    "prod-file": "node src/file/index.ts"
   },
   "license": "MIT",
   "type": "commonjs",
@@ -23,6 +26,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "global": "^4.4.0",
+    "heroku": "^7.60.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.4",
     "multer": "^1.4.5-lts.1",
