--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,19 +6,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "baseUrl": "./src",
-    "paths": {
-      "config/*": ["config/*"],
-      "middleware/*": ["middleware/*"],
-      "auth/*": ["auth/*"],
-      "server": ["server/*"]
-    }
+    "baseUrl": ".",
   },
-  "paths": {
-    "config/*": "config/*",
-    "middleware/*": "middleware/*",
-    "auth/*": "auth/*",
-    "server": "server/*"
-  },
-  "include": ["src"]
+  "include": ["."]
 }
